Fix spacing issue with resource tile

--- a/src/scss/_objects.callout.scss
+++ b/src/scss/_objects.callout.scss
@@ -14,7 +14,9 @@
   }
 
   &__content {
-    max-width: $size-small;
+    @include media-query(lap-and-up) {
+      max-width: $size-small;
+    }
   }
 
   .heading--uppercase {
